--- a/.gitignore
+++ b/.gitignore
@@ -50,4 +50,6 @@ amplify-gradle-config.json
 amplifytools.xcconfig
 .secret-*
 **.sample
+src/views/creds.txt
+amplify/team-provider-info.json
 #amplify-do-not-edit-end
